Tue Jan 14 10:06:14 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garhea.adb: Barrier -> Barrier_Type in Garlic.Utils.

	* s-parint.adb, s-parint.ads: It was not possible to query several
 	client elaboration requests from the same partition when the first
 	request was pending. Abortion of first RPC was unsafe and would
 	let the unit table in an inconsistent state. Synchronisation is
 	now a little bit less complex than it was. Restarting a partition
 	is now fully implemented (works on any partition, and not only on
 	boot partition). Code is a little bit cleaner.

Mon Jan 13 17:23:31 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garuti.ads, s-garuti.adb: No longer private to use it in
 	s-parint. Add a new semaphore type (with useful procedures to deal
 	with arrays).

Mon Jan 13 13:41:33 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpc.adb: Changed prototype of Public_RPC_Receiver to match the
	access type whenever taking the 'Access at registration time.

	* s-parint.adb: Idem.

Thu Jan  9 14:24:40 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-parint.adb: Implementation of partition restarting. Add a new
	procedure Invalidate_Receiving_Stub used by the programmer to
	signal to GARLIC to invalidate RNS info on a given partition and
	to the client cache to invalidate the old value and to query a new
	one.

	* s-garhea.ads, s-garhea.adb: Add a callback fonction to notify a
 	partition error to System.RPC. Add a registration procedure to
	enable System.RPC to register its callback.

	* s-rpc.adb: Provide a callback to be notified of partition
	error. This procedure unblocks pending RPCs with the dead
	partition. Requests table contains the partition id used for the
	associated RPC.

Fri Dec 20 12:10:08 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-stratt.adb: Raise Data_Error if an integer cannot be mapped
	onto its equivalent XDR integer.

Thu Dec 19 12:54:45 1996  Samuel Tardieu  <sam@inf.enst.fr>
